[metadata]
name = robust
url = https://github.com/robust-rosin/robust
description = An API for interacting with the ROBUST dataset
classifiers =
  Natural Language :: English
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7

[options]
python_requires = >= 3.6
install_requires =
  ruamel.yaml==0.16.12
  gitpython==3.1.9

package_dir =
  =lib
packages = find:

[options.packages.find]
where = lib

[flake8]
max-line-length = 79
import-order-style = edited
per-file-ignores =
  lib/robust/__init__.py:F401

[tox:tox]
envlist = py36, py37, py38

[testenv]
deps =
  -rrequirements.dev.txt
commands =
  flake8 lib
  mypy lib

[mypy]
ignore_missing_imports = False
disallow_untyped_defs = True
warn_unused_ignores = True

# needed because of ruamel.yaml
# see https://github.com/python/mypy/issues/7276
incremental = False
